clusters/homelab/apps/radarr/media-storage.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-movies-directories
  namespace: media
  labels:
    app.kubernetes.io/name: media-movies-directories
    app.kubernetes.io/part-of: homelab-media
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: media-movies-directories
      app.kubernetes.io/part-of: homelab-media
  policyTypes:
    - Ingress
    - Egress
